src/contrib/SignalSource/NIDAQ/nidaq/nidaq.pas

	calOp:                i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Change_Chan (
	chassisID:            i16;
	moduleSlot:           i16;
	chan:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Set_Potentiometer (
	chassisID:            i16;
	moduleSlot:           i16;
	channel:              i16;
	value:                u16;
	pottype:              u8
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Set_Excitation (
	chassisID:            i16;
	moduleSlot:           i16;
	channel:              i16;
	excitationType:       i16;
	excitation:           f32;
	actualExcitation:     pf32
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Configure_Connection (
	chassisID:            i16;
	moduleSlot:           i16;
	channel:              i16;
	connectionType:       i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Configure_Filter (
	chassisID:            i16;
	moduleSlot:           i16;
	channel:              i16;
	filterMode:           i16;
	freq:                 f64;
	cutoffDivDown:        u16;
	outClkDivDown:        u16;
	actFreq:              pf64
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Configure_Filter_NoStatusCheck (
	chassisID:            i16;
	moduleSlot:           i16;
	channel:              i16;
	filterMode:           i16;
	freq:                 f64;
	cutoffDivDown:        u16;
	outClkDivDown:        u16;
	actFreq:              pf64
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Get_Chassis_Info (
	chassisID:            i16;
	chassisType:          pi16;
	address:              pi16;
	commMode:             pi16;
	commPath:             pi16;
	numSlots:             pi16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Get_Module_Info (
	chassisID:            i16;
	slot:                 i16;
	modulePresent:        pi32;
	opMode:               pi16;
	DAQboard:             pi16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Get_State (
	chassisID:            i16;
	moduleSlot:           i16;
	port:                 i16;
	channel:              i16;
	data:                 pu32
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Get_Status (
	chassisID:            i16;
	moduleSlot:           i16;
	wait:                 i16;
	data:                 pu32
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Load_Config (
	chassisID:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_MuxCtr_Setup (
	slot:                 i16;
	enable:               i16;
	scanDiv:              i16;
	muxCtrVal:            u16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Reset (
	chassisID:            i16;
	moduleSlot:           i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Scale (
	chassisID:            i16;
	moduleSlot:           i16;
	SCXIchannel:          i16;
	SCXIgain:             f64;
	TBgain:               f64;
	DAQdevice:            i16;
	DAQchannel:           i16;
	DAQgain:              i16;
	numPoints:            u32;
	binArray:             pi16;
	voltArray:            pf64
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_SCAN_Setup (
	chassisID:            i16;
	numModules:           i16;
	modules:              pi16;
	numChans:             pi16;
	startChans:           pi16;
	DAQboard:             i16;
	modeFlag:             i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Set_Config (
	chassisID:            i16;
	chassisType:          i16;
	address:              i16;
	commMode:             i16;
	slotOrCOMM:           i16;
	numSlots:             i16;
	moduleTypes:          pi32;
	opModes:              pi16;
	DAQboards:            pi16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Set_Gain (
	chassisID:            i16;
	moduleSlot:           i16;
	channel:              i16;
	gain:                 f64
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Set_Gain_NoStatusCheck (
	chassisID:            i16;
	moduleSlot:           i16;
	channel:              i16;
	gain:                 f64
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Set_Input_Mode (
	chassisID:            i16;
	moduleSlot:           i16;
	inputMode:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Set_State (
	chassisID:            i16;
	moduleSlot:           i16;
	port:                 i16;
	channel:              i16;
	data:                 u32
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Single_Chan_Setup (
	chassisID:            i16;
	moduleSlot:           i16;
	chan:                 i16;
	DAQboard:             i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Track_Hold_Control (
	chassisID:            i16;
	moduleSlot:           i16;
	state:                i16;
	DAQboard:             i16
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Track_Hold_Setup (
	chassisID:            i16;
	moduleSlot:           i16;
	mode:                 i16;
	source:               i16;
	send:                 i16;
	holdCnt:              i16;
	DAQboard:             i16
	):nidaqStatus; stdcall; external nidaqdll;
function Select_Signal (
	deviceNumber:         i16;
	signal:               u32;
	source:               u32;
	sourceSpec:           u32
	):nidaqStatus; stdcall; external nidaqdll;
function Set_DAQ_Device_Info (
	deviceNumber:         i16;
	infoType:             u32;
	infoVal:              u32
	):nidaqStatus; stdcall; external nidaqdll;
function Timeout_Config (
	slot:                 i16;
	numTicks:             i32
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_Chan_Control (
	slot:                 i16;
	channel:              i16;
	operation:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_Check (
	slot:                 i16;
	channel:              i16;
	progress:             pi16;
	itersDone:            pu32;
	pointsDone:           pu32
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_ClockRate (
	slot:                 i16;
	group:                i16;
	whickClock:           i16;
	timebase:             i16;
	updateInterval:       u32;
	mode:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_DB_Config (
	slot:                 i16;
	numChans:             i16;
	chanVect:             pi16;
	DBMode:               i16;
	oldDataStop:          i16;
	partialTransfer:      i16
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_DB_HalfReady (
	slot:                 i16;
	numChans:             i16;
	chanVect:             pi16;
	halfReady:            pi16
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_DB_Transfer (
	slot:                 i16;
	numChans:             i16;
	chanVect:             pi16;
	buffer:               pi16;
	cnt:                  u32
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_from_Disk (
	slot:                 i16;
	numChans:             i16;
	chanVect:             pi16;
	fileName:             pi8;
	startPts:             u32;
	endPts:               u32;
	iterations:           u32;
	rate:                 f64
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_Group_Control (
	slot:                 i16;
	group:                i16;
	operation:            i16
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_Group_Setup (
	slot:                 i16;
	numChans:             i16;
	chanVect:             pi16;
	group:                i16
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_Load (
	slot:                 i16;
	numChans:             i16;
	chanVect:             pi16;
	buffer:               pi16;
	cnt:                  u32;
	iterations:           u32;
	mode:                 i16
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_Op (
	slot:                 i16;
	numChans:             i16;
	chanVect:             pi16;
	buffer:               pi16;
	cnt:                  u32;
	iterations:           u32;
	rate:                 f64
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_Rate (
	rate:                 f64;
	units:                i16;
	timebase:             pi16;
	updateInterval:       pu32
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_Scale (
	slot:                 i16;
	chan:                 i16;
	cnt:                  u32;
	gain:                 f64;
	voltArray:            pf64;
	binArray:             pi16
	):nidaqStatus; stdcall; external nidaqdll;
function AI_Read_Scan (
	slot:                 i16;
	reading:              pi16
	):nidaqStatus; stdcall; external nidaqdll;
function AI_VRead_Scan (
	slot:                 i16;
	reading:              pf64
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_ModuleID_Read (
	scxiID:               i16;
	moduleSlot:           i16;
	id:                   pi32
	):nidaqStatus; stdcall; external nidaqdll;
function AO_VScale (
	slot:                 i16;
	chan:                 i16;
	voltage:              f64;
	value:                pi16
	):nidaqStatus; stdcall; external nidaqdll;
function GPCTR_Change_Parameter (
	deviceNumber:         i16;
	gpCounterNumber:      u32;
	paramID:              u32;
	paramValue:           u32
	):nidaqStatus; stdcall; external nidaqdll;
function USE_MIO 
	 :nidaqStatus; stdcall; external nidaqdll;
function USE_LPM 
	 :nidaqStatus; stdcall; external nidaqdll;
function USE_LAB 
	 :nidaqStatus; stdcall; external nidaqdll;
function USE_DIO_96 
	 :nidaqStatus; stdcall; external nidaqdll;
function USE_DIO_32F 
	 :nidaqStatus; stdcall; external nidaqdll;
function USE_DIO_24 
	 :nidaqStatus; stdcall; external nidaqdll;
function USE_AO_610 
	 :nidaqStatus; stdcall; external nidaqdll;
function USE_AO_2DC 
	 :nidaqStatus; stdcall; external nidaqdll;
function DIG_Trigger_Config (
	slot:                 i16;
	grp:                  i16;
	startTrig:            i16;
	startPol:             i16;
	stopTrig:             i16;
	stopPol:              i16;
	ptsAfterStopTrig:     u32;
	pattern:              u32;
	patternMask:          u32
	):nidaqStatus; stdcall; external nidaqdll;
function SCXI_Set_Threshold (
	chassisID:            i16;
	moduleSlot:           i16;
	channel:              i16;
	threshHold:           f64;
	hysteresis:           f64
	):nidaqStatus; stdcall; external nidaqdll;
function WFM_Set_Clock (
	slot:                 i16;
	group:                i16;
	whichClock:           u32;
	desiredRate:          f64;
	units:                u32;
	actualRate:           pf64
	):nidaqStatus; stdcall; external nidaqdll;
function DAQ_Set_Clock (
	slot:                 i16;
	whichClock:           u32;
	desiredRate:          f64;
	units:                u32;
	actualRate:           pf64
	):nidaqStatus; stdcall; external nidaqdll;
function Tio_Select_Signal (
	deviceNumber:         i16;
	signal:               u32;
	source:               u32;
	sourceSpec:           u32
	):nidaqStatus; stdcall; external nidaqdll;
function Tio_Combine_Signals (
	deviceNumber:         i16;
	internalLine:         u32;
	logicalExpression:    u32
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_In_Prt (
	slot:                 i16;
	port:                 i16;
	pattern:              pi32
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Out_Prt (
	slot:                 i16;
	port:                 i16;
	pattern:              i32
	):nidaqStatus; stdcall; external nidaqdll;
function AI_Get_Overloaded_Channels (
	deviceNumber:         i16;
	numChannels:          pi16;
	channelList:          pi16
	):nidaqStatus; stdcall; external nidaqdll;
function Calibrate_TIO (
	deviceNumber:         i16;
	operation:            u32;
	setOfCalConst:        u32;
	referenceFreq:        f64
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Change_Message_Config (
	deviceNumber:         i16;
	operation:            i16;
	riseChanStr:          pi8;
	fallChanStr:          pi8;
	handle:               HWND;
	msg:                  i16;
	callBackAddr:         u32
	):nidaqStatus; stdcall; external nidaqdll;
function DIG_Change_Message_Control (
	deviceNumber:         i16;
